Register&Login finished

--- a/Adventure/Views/Login/Login_Layout.cshtml
+++ b/Adventure/Views/Login/Login_Layout.cshtml
@@ -62,7 +62,7 @@
                     <li class="nav-item">
                         @Html.ActionLink("联系我们", "Contact", "Home", new { area = "" }, new { @class = "navbar-brand" })
                     </li>
-                    @if (Session["user"] == null)
+                    @if (Session["user_id"] == null)
                     {
                         <li>
                             @Html.ActionLink("登陆/注册", "Index", "Login", new { area = "" }, new { @class = "navbar-brand" })
@@ -72,6 +72,9 @@
                     {
                         <li>
                             @Html.ActionLink("My Adventure", "Index", "Login", new { area = "" }, new { @class = "navbar-brand" })
+                        </li>
+                        <li>
+                            @Html.ActionLink("登出", "Index", "Login", new { area = "" }, new { @class = "navbar-brand" })
                         </li>
                     }
                 </ul>
@@ -118,7 +121,7 @@
                             <li>
                                 @Html.ActionLink("联系我们", "Contact", "Home", new { area = "" }, new { @class = "py-2 d-block" })
                             </li>
-                            @if (Session["user"] == null)
+                            @if (Session["user_id"] == null)
                             {
                                 <li>
                                     @Html.ActionLink("登陆/注册", "Index", "Login", new { area = "" }, new { @class = "py-2 d-block" })
