--- a/Adventure/Views/Order/Order_Layout.cshtml
+++ b/Adventure/Views/Order/Order_Layout.cshtml
@@ -65,7 +65,7 @@
                     <li class="nav-item">
                         @Html.ActionLink("联系我们", "Contact", "Home", new { area = "" }, new { @class = "navbar-brand" })
                     </li>
-                    @if (Session["user"] == null)
+                    @if (Session["user_id"] == null)
                     {
                         <li>
                             @Html.ActionLink("登陆/注册", "Index", "Login", new { area = "" }, new { @class = "navbar-brand" })
@@ -75,6 +75,9 @@
                     {
                         <li>
                             @Html.ActionLink("My Adventure", "Index", "Login", new { area = "" }, new { @class = "navbar-brand" })
+                        </li>
+                        <li>
+                            @Html.ActionLink("登出", "Index", "Login", new { area = "" }, new { @class = "navbar-brand" })
                         </li>
                     }
                 </ul>
@@ -121,7 +124,7 @@
                             <li>
                                 @Html.ActionLink("联系我们", "Contact", "Home", new { area = "" }, new { @class = "py-2 d-block" })
                             </li>
-                            @if (Session["user"] == null)
+                            @if (Session["user_id"] == null)
                             {
                                 <li>
                                     @Html.ActionLink("登陆/注册", "Index", "Login", new { area = "" }, new { @class = "py-2 d-block" })
