--- a/Adventure/Views/Order/Order_Layout.cshtml
+++ b/Adventure/Views/Order/Order_Layout.cshtml
@@ -73,12 +73,30 @@
                     }
                     else
                     {
-                        <li>
-                            @Html.ActionLink("My Adventure", "Index", "Login", new { area = "" }, new { @class = "navbar-brand" })
+                        <li class="dropdown navbar-brand">
+                            <a href="#" data-toggle="dropdown " class="dropdown-toggle">My Adventure</a>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    @Html.ActionLink(Session["first_name"] + " " + Session["last_name"], "Index", "PersonInfo", new { area = "" }, new { @class = "text-center" })
+                                </li>
+                                <li>
+                                    @Html.ActionLink("我的信息", "Index", "PersonInfo", new { area = "" }, new { @class = "text-center" })
+                                </li>
+                                <li>
+                                    @Html.ActionLink("我的Adventure", "Index", "BackAdmin", new { area = "" }, new { @class = "text-center" })
+                                </li>
+                                <li>
+                                    @Html.ActionLink("发布房源", "Index", "BackAdmin", new { area = "" }, new { @class = "text-center" })
+                                </li>
+                                <li>
+                                    @Html.ActionLink("发布体验活动", "Index", "BackAdmin", new { area = "" }, new { @class = "text-center" })
+                                </li>
+                                <li>
+                                    @Html.ActionLink("登出", "Index", "Login", new { area = "" }, new { @class = "text-center" })
+                                </li>
+                            </ul>
                         </li>
-                        <li>
-                            @Html.ActionLink("登出", "Index", "Login", new { area = "" }, new { @class = "navbar-brand" })
-                        </li>
+
                     }
                 </ul>
             </div>
@@ -133,7 +151,7 @@
                             else
                             {
                                 <li>
-                                    @Html.ActionLink("My Adventure", "Index", "Login", new { area = "" }, new { @class = "py-2 d-block" })
+                                    @Html.ActionLink("注销登陆", "Index", "Login", new { area = "" }, new { @class = "py-2 d-block" })
                                 </li>
                             }
                         </ul>
