--- a/Adventure/Views/PersonInfo/Index.cshtml
+++ b/Adventure/Views/PersonInfo/Index.cshtml
@@ -1,13 +1,51 @@
 ﻿@{
     ViewBag.Title = "我的信息";
-    Layout = "~/Views/Login/Login_Layout.cshtml";
+    Layout = "~/Views/PersonInfo/PersonInfo_Layout.cshtml";
 }
+<script src="~/Content/uploadify/jquery.uploadify-3.1.min.js"></script>
 
 <script>
-    function turnToLogin() {
-        window.location.href = "/Login";
+    function unlockEdit() {
+        $("#form-password").removeAttr('disabled');
+        $("#form-first-name").removeAttr('disabled');
+        $("#form-last-name").removeAttr('disabled');
+        $("#form-about-yourself").removeAttr('disabled');
+        $("#form-username").removeAttr('disabled');
+        $("#form-email").removeAttr('disabled');
+        $("#form-password").removeAttr('disabled');
+        $("#form-repeat-password").removeAttr('disabled');
+        $("#form-phoneNumber").removeAttr('disabled');
+        $("#form-gender").removeAttr('disabled');
+        $("#form-country").removeAttr('disabled');
+        $("#form-language").removeAttr('disabled');
+        $("#submitBtn").removeAttr('disabled');
+
     }
-   
+    function preview(fileObj) {
+        var file = fileObj.files[0];
+        var r = new FileReader();
+        r.readAsDataURL(file);
+        $(r).load(function () {
+            $('#iconShown').css("background-image", "url(" + this.result + ")");
+        })            
+    }
+
+
+    $(document).ready(function () {
+            var flag = "@ViewBag.flag";
+            var errorMessage = "@ViewBag.errorMessage";
+            if (flag == "1") {
+                alert(errorMessage);
+                @{ ViewBag.flag = null;}
+                window.location.href = "/Home";
+            } else {
+                if (flag != "") {
+                      @{ ViewBag.flag = null; }
+                    alert(errorMessage);
+
+                }
+            }
+    })
 </script>
 <div class="hero-wrap js-fullheight" style="background-image: url('../images/Login_bg.jpg');">
     <div class="overlay"></div>
@@ -23,13 +61,13 @@
                         <div class="row">
                             <div class="col-sm-6 col-sm-offset-3 form-box">
 
-                                <form role="form" action="@Url.Action("")" method="post" class="registration-form">
+                                <form role="form" action="@Url.Action("")" method="post" class="registration-form" enctype="multipart/form-data">
 
                                     <fieldset>
                                         <div class="form-top">
                                             <div class="form-top-left">
                                                 <h3>Step 1 / 4</h3>
-                                                <h4>首先是你的基本信息</h4>
+                                                <h4>您的基本信息</h4>
                                             </div>
                                             <div class="form-top-right">
                                                 <i class="fa fa-user"></i>
@@ -38,18 +76,18 @@
                                         <div class="form-bottom">
                                             <div class="form-group">
                                                 <label class="sr-only" for="form-first-name">您的姓氏</label>
-                                                <input type="text" disabled="disabled" name="form-first-name" placeholder="First name..." class="form-first-name form-control" id="form-first-name">
+                                                <input type="text" name="form-first-name" disabled="disabled" placeholder="First name..." class="form-first-name form-control" id="form-first-name" value="@Session["first_name"]">
                                             </div>
                                             <div class="form-group">
                                                 <label class="sr-only" for="form-last-name">您的名字</label>
-                                                <input type="text" disabled="disabled" name="form-last-name" placeholder="Last name..." class="form-last-name form-control" id="form-last-name">
+                                                <input type="text" name="form-last-name" disabled="disabled" placeholder="Last name..." class="form-last-name form-control" id="form-last-name" value="@Session["last_name"]">
                                             </div>
                                             <div class="form-group">
                                                 <label class="sr-only" for="form-about-yourself">自我介绍</label>
                                                 <textarea name="form-about-yourself" disabled="disabled" placeholder="About yourself..."
-                                                          class="form-about-yourself form-control" id="form-about-yourself"></textarea>
+                                                          class="form-about-yourself form-control" id="form-about-yourself">@Session["self_introduction"]</textarea>
                                             </div>
-                                            <button type="button" class="btn btn-next" onclick="turnToLogin()">编辑我的信息</button>
+                                            <button type="button" class="btn" onclick="unlockEdit();">编辑我的信息</button>
                                             <button type="button" class="btn btn-next">下一页</button>
                                         </div>
                                     </fieldset>
@@ -58,7 +96,7 @@
                                         <div class="form-top">
                                             <div class="form-top-left">
                                                 <h3>Step 2 / 4</h3>
-                                                <h4>您在Adventure的账户信息</h4>
+                                                <h4>您的账户信息</h4>
                                             </div>
                                             <div class="form-top-right">
                                                 <i class="fa fa-key"></i>
@@ -67,11 +105,11 @@
                                         <div class="form-bottom">
                                             <div class="form-group">
                                                 <label class="sr-only" for="form-username">用户名</label>
-                                                <input type="text" name="form-username"disabled="disabled" placeholder="User Name..." class="form-control" id="form-username">
+                                                <input type="text" name="form-username" disabled="disabled" placeholder="User Name..." class="form-control" value="@Session["user_id"]" id="form-username">
                                             </div>
                                             <div class="form-group">
                                                 <label class="sr-only" for="form-email">邮箱</label>
-                                                <input type="text" name="form-email"disabled="disabled" placeholder="Email..." class="form-email form-control" id="form-email">
+                                                <input type="text" name="form-email" disabled="disabled" placeholder="Email..." class="form-email form-control" value="@Session["email_address"]" id="form-email">
                                             </div>
                                             <div class="form-group">
                                                 <label class="sr-only" for="form-password">密码</label>
@@ -79,8 +117,8 @@
                                             </div>
                                             <div class="form-group">
                                                 <label class="sr-only" for="form-repeat-password">确认密码</label>
-                                                <input type="password" name="form-repeat-password" placeholder="Repeat password..."
-                                                       class="form-repeat-password form-control" disabled="disabled" id="form-repeat-password">
+                                                <input type="password" disabled="disabled" name="form-repeat-password" placeholder="Repeat password..."
+                                                       class="form-repeat-password form-control" id="form-repeat-password">
                                             </div>
                                             <button type="button" class="btn btn-previous">上一页</button>
                                             <button type="button" class="btn btn-next">下一页</button>
@@ -90,7 +128,7 @@
                                     <fieldset>
                                         <div class="form-top">
                                             <div class="form-top-left">
-                                                <h3>Step 3 / 4</h3>
+                                                <h3>Step 3 / 3</h3>
                                                 <h4>您的详细信息</h4>
                                             </div>
                                             <div class="form-top-right">
@@ -101,32 +139,41 @@
                                             <div class="form-group">
                                                 <label class="sr-only" for="form-gender">性别</label>
                                                 <select name="form-gender" disabled="disabled" id="form-gender" class="form-control">
-                                                    <option value="1" selected>男</option>
-                                                    <option value="2">女</option>
+                                                    @{ int gender = (int)Session["gender"];
+                                                        if (gender == 1)
+                                                        {
+                                                            <option value="1" selected>男</option>
+                                                            <option value="2">女</option>
+                                                        }
+                                                        else
+                                                        {
+                                                            <option value="1">男</option>
+                                                            <option value="2" selected>女</option>
+                                                        }
+                                                    }
                                                 </select>
                                             </div>
                                             <div class="form-group">
                                                 <label class="sr-only" for="form-phoneNumber">手机号码</label>
-                                                <input type="text" name="form-phoneNumber" disabled="disabled" placeholder="Phone Number..." class="form-control" id="form-phoneNumber">
+                                                <input type="text" name="form-phoneNumber" disabled="disabled" placeholder="Phone Number..." class="form-control" value="@Session["phone_number"]" id="form-phoneNumber">
                                             </div>
                                             <div class="form-group">
                                                 <label class="sr-only" for="form-country">国家</label>
-                                                <input type="text" name="form-country" disabled="disabled" placeholder="Your Country..." class="form-control" id="form-country">
+                                                <input type="text" name="form-country" disabled="disabled" placeholder="Your Country..." class="form-control" value="@Session["country"]" id="form-country">
                                             </div>
                                             <div class="form-group">
                                                 <label class="sr-only" for="form-language">语言</label>
-                                                <input type="text" name="form-language" disabled="disabled" placeholder="Your Language..." class="form-control" id="form-language">
+                                                <input type="text" name="form-language" disabled="disabled" placeholder="Your Language..." class="form-control" value="@Session["main_language"]" id="form-language">
                                             </div>
                                             <button type="button" class="btn btn-previous">上一页</button>
-                                            <button type="submit" class="btn">提交注册</button>
+                                            <button type="button" class="btn btn-next">下一页</button>
                                         </div>
                                     </fieldset>
-
                                     <fieldset>
                                         <div class="form-top">
                                             <div class="form-top-left">
                                                 <h3>Step 4 / 4</h3>
-                                                <h4>您在Adventure的个性头像</h4>
+                                                <h4>您的个性头像</h4>
                                             </div>
                                             <div class="form-top-right">
                                                 <i class="fa fa-twitter"></i>
@@ -134,17 +181,20 @@
                                         </div>
                                         <div class="form-bottom">
                                             <div class="form-group">
-                                                <label class="sr-only" for="form-gender">性别</label>
-                                                <select name="form-gender" disabled="disabled" id="form-gender" class="form-control">
-                                                    <option value="1" selected>男</option>
-                                                    <option value="2">女</option>
-                                                </select>
+                                                    <div class="item">
+                                                        <div class="testimony-wrap p-4 pb-5" style="margin-top:50px">
+                                                            <div class="user-img mb-5" id="iconShown" style="background-image: url(@Session["head_icon"])">
+                                                            </div>
+                                                            <h5>上传您的头像</h5>
+                                                            <input name="filedata" onchange="preview(this)" id="myIcon" type="file" value="浏览" /><br />
+                                                        </div>
+                                                    </div>
                                             </div>
+                                                            <button type="button" class="btn btn-previous">上一页</button>
+                                                            <button type="submit" id="submitBtn" disabled="disabled" class="btn">提交注册</button>
+                                                        </div>
+                                        </fieldset>
 
-                                            <button type="button" class="btn btn-previous">上一页</button>
-                                            <button type="submit" disabled="disabled" class="btn">提交修改</button>
-                                        </div>
-                                    </fieldset>
                                 </form>
 
                             </div>
