--- a/Adventure/Views/Shared/_Layout.cshtml
+++ b/Adventure/Views/Shared/_Layout.cshtml
@@ -83,7 +83,7 @@
                                     @Html.ActionLink("发布房源", "Index", "BackAdmin", new { area = "" }, new { @class = "text-center" })
                                 </li>
                                 <li>
-                                    @Html.ActionLink("发布体验活动", "Index", "BackAdmin", new { area = "" }, new { @class = "text-center" })
+                                    @Html.ActionLink("发布体验活动", "Publish", "Activity", new { area = "" }, new { @class = "text-center" })
                                 </li>
                                 <li>
                                     @Html.ActionLink("登出", "Index", "Login", new { area = "" }, new { @class = "text-center" })
