--- a/Adventure/Views/Activity/Publish.cshtml
+++ b/Adventure/Views/Activity/Publish.cshtml
@@ -15,7 +15,7 @@
     }
 </style>
 
-<div class="image-container set-full-height" style="background-image: url('../../images/bg_1.jpg');">
+<div class="image-container set-full-height" style="background-image: url('../images/Publish_bg.jpg');">
 
     <!-- Big container -->
     <div class="container">
@@ -30,26 +30,26 @@
                             <hr />
                         </div>
 
-                        <form id="new-act" action="#" method="post">
+                        <form id="new-act" action="PublishAccess" method="post" enctype="multipart/form-data">
                             <!-- 创建新活动 -->
                             <div>
                                 <div class="row">
                                     <div class="col-sm-5 col-sm-offset-1" style="margin-left:auto; margin-right:auto;">
                                         <div class="form-group">
                                             <label>活动地点</label>
-                                            <input type="text" maxlength="50" class="form-control" name="???" placeholder="" required="required">
+                                            <input type="text" maxlength="50" class="form-control" name="activity_place" placeholder="" required="required">
                                         </div>
                                     </div>
                                     <div class="col-sm-5 col-sm-offset-1" style="margin-left:auto; margin-right:auto;">
                                         <div class="form-group">
                                             <label>活动标题</label>
-                                            <input type="text" maxlength="100" class="form-control" name="???" placeholder="" required="required">
+                                            <input type="text" maxlength="100" class="form-control" name="activity_title" placeholder="" required="required">
                                         </div>
                                     </div>
                                     <div class="col-sm-5 col-sm-offset-1" style="margin-left:auto; margin-right:auto;">
                                         <div class="form-group">
                                             <label>名额</label>
-                                            <input type="number" class="form-control" name="???" required="required"
+                                            <input type="number" class="form-control" name="activity_capacity" required="required"
                                                    onkeyup="if (this.value.length == 1) { this.value = this.value.replace(/[^1-9]/g, '') }else { this.value = this.value.replace(/\D/g, '') }"
                                                    onafterpaste="if(this.value.length==1){this.value=this.value.replace(/[^1-9]/g,'')}else{this.value=this.value.replace(/\D/g,'')}">
                                         </div>
@@ -57,25 +57,25 @@
                                     <div class="col-sm-5 col-sm-offset-1" style="margin-left:auto; margin-right:auto;">
                                         <div class="form-group">
                                             <label>活动内容</label>
-                                            <textarea maxlength="400" class="form-control" name="???" required="required"></textarea>
+                                            <textarea maxlength="400" class="form-control" name="activity_content" required="required"></textarea>
                                         </div>
                                     </div>
                                     <div class="col-sm-5 col-sm-offset-1" style="margin-left:auto; margin-right:auto;">
                                         <div class="form-group">
                                             <label>活动注意事项</label>
-                                            <textarea maxlength="150" class="form-control" name="???" required="required"></textarea>
+                                            <textarea maxlength="150" class="form-control" name="activity_note" required="required"></textarea>
                                         </div>
                                     </div>
                                     <div class="col-sm-5 col-sm-offset-1" style="margin-left:auto; margin-right:auto;">
                                         <div class="form-group">
                                             <label>取消预订政策</label>
-                                            <textarea maxlength="150" class="form-control" name="???" required="required"></textarea>
+                                            <textarea maxlength="150" class="form-control" name="activity_cancel" required="required"></textarea>
                                         </div>
                                     </div>
                                     <div class="col-sm-5 col-sm-offset-1" style="margin-left:auto; margin-right:auto;">
                                         <div class="form-group">
                                             <label>图片/一张</label>
-                                            <input type="file" accept="image/*" class="form-control" name="???" required="required">
+                                            <input type="file" accept="image/*" class="form-control" name="myfile" required="required">
                                         </div>
                                     </div>
                                     <div class="col-sm-8 col-sm-offset-2" style="margin-left:auto; margin-right:auto;">
@@ -145,11 +145,18 @@
                             <hr />
                             <p class="category">在已有体验活动中选择一个，为其增加活动时间</p>
                         </div>
-
-                        <label class="activity" style="margin-left:auto; margin-right:auto;">
-                            <b>法式风情｜上海老城早午餐与隐秘探店</b>
-                        </label>
-
+                        @{
+                            for (int i = 0; i < ViewBag.activityList.Length; i++)
+                            {
+                                <label class="activity" style="margin-left:auto; margin-right:auto;">
+                                    <b>@ViewBag.activityList[i].activity_name</b>
+                                </label>
+                            }
+                        }
+                        <!--
+    <label class="activity" style="margin-left:auto; margin-right:auto;">
+        <b>法式风情｜上海老城早午餐与隐秘探店</b>
+    </label>-->
                     </div>
                 </div>
                 <!-- wizard container -->
@@ -172,7 +179,7 @@
         $addInstance.hide();
 
         $('.activity').on('click', function () {
-
+            $('.activity').removeClass('choosed');
             $newAct.hide();
             $addInstance.show();
             $(this).addClass('choosed');
