活动实例添加页面完成（没有做后台、因为日期不知道怎么传） 主页体验活动传值、评论由于后台未完成做不了、房源提交日期不对。

--- a/Adventure/Views/Activity/Index.cshtml
+++ b/Adventure/Views/Activity/Index.cshtml
@@ -99,51 +99,142 @@
 
             <div class="col-lg-9">
                 <div class="row">
-                    <!-- 一个活动 -->
-                    <div class="col-sm col-md-6 col-lg-4 ftco-animate">
-                        <div class="destination">
-                            <a href="Activity\SingleActivity">
-                                <div id="picture" class="img img-2 d-flex justify-content-center align-items-center" style="background-image: url(../../images/destination-1.jpg);">
-                                </div>
-                                <div class="text p-3">
-                                    <div class="d-flex">
-                                        <div>
-                                            <h3>法式风情｜上海老城早午餐与隐秘探店</h3>
-                                            <p class="rate">
-                                                <i class="icon-star"></i>
-                                                <i class="icon-star"></i>
-                                                <i class="icon-star"></i>
-                                                <i class="icon-star"></i>
-                                                <i class="icon-star-o"></i>
-                                                <span>8 Rating</span>
-                                            </p>
+                        <div class="container ftco-section testimony-section">
+                            <div class="row ftco-animate">
+                                <div class="col-md-12">
+                                    <div class="carousel-testimony owl-carousel ftco-owl">
+                                        <div class="item">
+                                            <div class="testimony-wrap p-4 pb-5">
+                                                <div class="user-img mb-5" style="background-image: url(../images/person_1.jpg)">
+                                                    <span class="quote d-flex align-items-center justify-content-center">
+                                                        <i class="icon-quote-left"></i>
+                                                    </span>
+                                                </div>
+                                                <div class="text">
+                                                    <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                                                    <p class="name">1</p>
+                                                    <span class="position">Marketing Manager</span>
+                                                </div>
+                                            </div>
                                         </div>
-                                    </div>
-                                    <div>上海</div>
-                                    <hr />
+                                        <div class="item">
+                                            <div class="testimony-wrap p-4 pb-5">
+                                                <div class="user-img mb-5" style="background-image: url(../images/person_2.jpg)">
+                                                    <span class="quote d-flex align-items-center justify-content-center">
+                                                        <i class="icon-quote-left"></i>
+                                                    </span>
+                                                </div>
+                                                <div class="text">
+                                                    <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                                                    <p class="name">2</p>
+                                                    <span class="position">Interface Designer</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <div class="testimony-wrap p-4 pb-5">
+                                                <div class="user-img mb-5" style="background-image: url(../images/person_3.jpg)">
+                                                    <span class="quote d-flex align-items-center justify-content-center">
+                                                        <i class="icon-quote-left"></i>
+                                                    </span>
+                                                </div>
+                                                <div class="text">
+                                                    <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                                                    <p class="name">3</p>
+                                                    <span class="position">UI Designer</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <div class="testimony-wrap p-4 pb-5">
+                                                <div class="user-img mb-5" style="background-image: url(../images/person_1.jpg)">
+                                                    <span class="quote d-flex align-items-center justify-content-center">
+                                                        <i class="icon-quote-left"></i>
+                                                    </span>
+                                                </div>
+                                                <div class="text">
+                                                    <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                                                    <p class="name">4</p>
+                                                    <span class="position">Web Developer</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <div class="testimony-wrap p-4 pb-5">
+                                                <div class="user-img mb-5" style="background-image: url(../images/person_1.jpg)">
+                                                    <span class="quote d-flex align-items-center justify-content-center">
+                                                        <i class="icon-quote-left"></i>
+                                                    </span>
+                                                </div>
+                                                <div class="text">
+                                                    <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                                                    <p class="name">5</p>
+                                                    <span class="position">System Analyst</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <div class="testimony-wrap p-4 pb-5">
+                                                <div class="user-img mb-5" style="background-image: url(../images/person_1.jpg)">
+                                                    <span class="quote d-flex align-items-center justify-content-center">
+                                                        <i class="icon-quote-left"></i>
+                                                    </span>
+                                                </div>
+                                                <div class="text">
+                                                    <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                                                    <p class="name">6</p>
+                                                    <span class="position">System Analyst</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="item">
+                                            <div class="testimony-wrap p-4 pb-5">
+                                                <a href="Activity\SingleActivity">
+                                                    <div class="user-img mb-5" style="background-image: url(../../images/destination-1.jpg)">
+
+                                                    </div>
+                                                    <div class="text p-3">
+                                                        <div class="d-flex">
+                                                            <div>
+                                                                <div id="picture" class="img img-2 d-flex justify-content-center align-items-center" style="background-image: url(../../images/destination-1.jpg);">
+                                                                </div>
+                                                                <h5 style="color:#FFFFFF">法式风情｜上海老城早午餐与隐秘探店</h5>
+                                                                <p class="rate">
+                                                                    <i class="icon-star"></i>
+                                                                    <i class="icon-star"></i>
+                                                                    <i class="icon-star"></i>
+                                                                    <i class="icon-star"></i>
+                                                                    <i class="icon-star-o"></i>
+                                                                    <span>8 Rating</span>
+                                                                </p>
+                                                            </div>
+                                                        </div>
+                                                        <div>上海</div>
+                                                        <hr />
+                                                    </div>
+                                                </a>
+                                            </div>
+
+                                        </div>
+                                            <div class="item">
+                                                <div class="testimony-wrap p-4 pb-5">
+                                                    <div class="user-img mb-5" style="background-image: url(../images/person_1.jpg)">
+                                                        <span class="quote d-flex align-items-center justify-content-center">
+                                                            <i class="icon-quote-left"></i>
+                                                        </span>
+                                                    </div>
+                                                    <div class="text">
+                                                        <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                                                        <p class="name">7</p>
+                                                        <span class="position">System Analyst</span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
                                 </div>
-                            </a>
+                            </div>
                         </div>
-                    </div>
-                    <!-- END -->
-
-                </div>
-
-                <div class="row mt-5">
-                    <div class="col text-center">
-                        <div class="block-27">
-                            <ul>
-                                <li><a href="#">&lt;</a></li>
-                                <li class="active"><span>1</span></li>
-                                <li><a href="#">2</a></li>
-                                <li><a href="#">3</a></li>
-                                <li><a href="#">4</a></li>
-                                <li><a href="#">5</a></li>
-                                <li><a href="#">&gt;</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
+                    <!-- 一个活动 -->
 
             </div> <!-- .col-md-8 -->
         </div>
