--- a/Adventure/Views/Home/Index.cshtml
+++ b/Adventure/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
     ViewBag.Title = "度假屋、民宿、体验与旅行故事";
 }
 <script>
+   /*
     $(document).ready(function () {
         $.get("../Home/getCount",
             function (e) {
@@ -18,6 +19,7 @@
 
             });
     })
+    */
 </script>
 <div class="hero-wrap js-fullheight" style="background-image: url('../images/bg_1.jpg');">
     <div class="overlay"></div>
@@ -234,148 +236,52 @@
     <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
             <div class="col-md-7 heading-section text-center ftco-animate">
-                <h2 class="mb-4">Most Popular Destination</h2>
+                <h2 class="mb-4">The Latest Activity</h2>
             </div>
         </div>
     </div>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm col-md-6 col-lg ftco-animate">
-                <div class="destination">
-                    <a href="#" class="img img-2 d-flex justify-content-center align-items-center" style="background-image: url(../images/destination-1.jpg);">
-                        <div class="icon d-flex justify-content-center align-items-center">
-                            <span class="icon-link"></span>
-                        </div>
-                    </a>
-                    <div class="text p-3">
-                        <div class="d-flex">
-                            <div class="one">
-                                <h3><a href="#">Paris, Italy</a></h3>
-                                <p class="rate">
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star-o"></i>
-                                    <span>8 Rating</span>
-                                </p>
+            @{
+                if (ViewBag.top_experience != null)
+                {
+                    for (int i = 0; i < 4 && i < ViewBag.top_experience.Length; i++)
+                    {
+                <div class="col-sm col-md-6 col-lg ftco-animate">
+                    <div class="destination">
+                        <a href="../Activity/SingleActivity?productID=@ViewBag.top_experience[i].activity_id" class="img img-2 d-flex justify-content-center align-items-center" style="background-image: url(@ViewBag.top_experience[i].activity_pictures);">
+                            <div class="icon d-flex justify-content-center align-items-center">
+                                <span class="icon-link"></span>
                             </div>
-                            <div class="two">
-                                <span class="price">$200</span>
+                        </a>
+                        <div class="text p-3">
+                            <div class="d-flex">
+                                <div class="one">
+                                    <h3><a class="icon icon-map-marker" href="../Activity/SingleActivity?productID=@ViewBag.top_experience[i].activity_id">@ViewBag.top_experience[i].address</a></h3>
+                                    <p class="rate">
+                                        <i class="icon-star"></i>
+                                        <i class="icon-star"></i>
+                                        <i class="icon-star"></i>
+                                        <i class="icon-star"></i>
+                                        <i class="icon-star"></i>
+                                        <span>精品推荐</span>
+                                    </p>
+                                </div>
+                                <div class="two">
+                                    <span class="price">@ViewBag.top_experience[i].max_member_limit 人</span>
+                                </div>
                             </div>
+                            <p>@ViewBag.top_experience[i].activity_name</p>
+                            <hr>
+                            <p class="bottom-area d-flex">
+                                <span class="ml-auto"><a href="../Activity/SingleActivity?productID=@ViewBag.top_experience[i].activity_id">查看详情</a></span>
+                            </p>
                         </div>
-                        <p>Far far away, behind the word mountains, far from the countries</p>
-                        <p class="days"><span>2 days 3 nights</span></p>
-                        <hr>
-                        <p class="bottom-area d-flex">
-                            <span><i class="icon-map-o"></i> San Franciso, CA</span>
-                            <span class="ml-auto"><a href="#">Discover</a></span>
-                        </p>
                     </div>
                 </div>
-            </div>
-            <div class="col-sm col-md-6 col-lg ftco-animate">
-                <div class="destination d-md-flex flex-column-reverse">
-                    <a href="#" class="img img-2 d-flex justify-content-center align-items-center" style="background-image: url(../images/destination-2.jpg);">
-                        <div class="icon d-flex justify-content-center align-items-center">
-                            <span class="icon-link"></span>
-                        </div>
-                    </a>
-                    <div class="text p-3">
-                        <div class="d-flex">
-                            <div class="one">
-                                <h3><a href="#">Paris, Italy</a></h3>
-                                <p class="rate">
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star-o"></i>
-                                    <span>8 Rating</span>
-                                </p>
-                            </div>
-                            <div class="two">
-                                <span class="price">$200</span>
-                            </div>
-                        </div>
-                        <p>Far far away, behind the word mountains, far from the countries</p>
-                        <p class="days"><span>2 days 3 nights</span></p>
-                        <hr>
-                        <p class="bottom-area d-flex">
-                            <span><i class="icon-map-o"></i> San Franciso, CA</span>
-                            <span class="ml-auto"><a href="#">Discover</a></span>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm col-md-6 col-lg ftco-animate">
-                <div class="destination">
-                    <a href="#" class="img img-2 d-flex justify-content-center align-items-center" style="background-image: url(../images/destination-3.jpg);">
-                        <div class="icon d-flex justify-content-center align-items-center">
-                            <span class="icon-link"></span>
-                        </div>
-                    </a>
-                    <div class="text p-3">
-                        <div class="d-flex">
-                            <div class="one">
-                                <h3><a href="#">Paris, Italy</a></h3>
-                                <p class="rate">
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star-o"></i>
-                                    <span>8 Rating</span>
-                                </p>
-                            </div>
-                            <div class="two">
-                                <span class="price">$200</span>
-                            </div>
-                        </div>
-                        <p>Far far away, behind the word mountains, far from the countries</p>
-                        <p class="days"><span>2 days 3 nights</span></p>
-                        <hr>
-                        <p class="bottom-area d-flex">
-                            <span><i class="icon-map-o"></i> San Franciso, CA</span>
-                            <span class="ml-auto"><a href="#">Discover</a></span>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm col-md-6 col-lg ftco-animate">
-                <div class="destination d-md-flex flex-column-reverse">
-                    <a href="#" class="img img-2 d-flex justify-content-center align-items-center" style="background-image: url(../images/destination-4.jpg);">
-                        <div class="icon d-flex justify-content-center align-items-center">
-                            <span class="icon-link"></span>
-                        </div>
-                    </a>
-                    <div class="text p-3">
-                        <div class="d-flex">
-                            <div class="one">
-                                <h3><a href="#">Paris, Italy</a></h3>
-                                <p class="rate">
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star"></i>
-                                    <i class="icon-star-o"></i>
-                                    <span>8 Rating</span>
-                                </p>
-                            </div>
-                            <div class="two">
-                                <span class="price">$200</span>
-                            </div>
-                        </div>
-                        <p>Far far away, behind the word mountains, far from the countries</p>
-                        <p class="days"><span>2 days 3 nights</span></p>
-                        <hr>
-                        <p class="bottom-area d-flex">
-                            <span><i class="icon-map-o"></i> San Franciso, CA</span>
-                            <span class="ml-auto"><a href="#">Discover</a></span>
-                        </p>
-                    </div>
-                </div>
-            </div>
+                        }
+                    }
+                }
         </div>
     </div>
 </section>
@@ -387,7 +293,7 @@
                     <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
                         <div class="block-18 text-center">
                             <div class="text">
-                                <strong id="customerCount" class="number" data-number="1200">0</strong>
+                                <strong id="customerCount" class="number" data-number="@ViewBag.customerCount">0</strong>
                                 <span>我们的顾客</span>
                             </div>
                         </div>
@@ -395,7 +301,7 @@
                     <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
                         <div class="block-18 text-center">
                             <div class="text">
-                                <strong id="homestayCount" class="number" data-number="1200">0</strong>
+                                <strong id="homestayCount" class="number" data-number="@ViewBag.homestayCount">0</strong>
                                 <span>我们的民宿房源</span>
                             </div>
                         </div>
@@ -403,7 +309,7 @@
                     <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
                         <div class="block-18 text-center">
                             <div class="text">
-                                <strong id="activityCount" class="number" data-number="1200">0</strong>
+                                <strong id="activityCount" class="number" data-number="@ViewBag.activityCount">0</strong>
                                 <span>我们的体验活动</span>
                             </div>
                         </div>
@@ -411,7 +317,7 @@
                     <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
                         <div class="block-18 text-center">
                             <div class="text">
-                                <strong id="reviewCount" class="number" data-number="1200">0</strong>
+                                <strong id="reviewCount" class="number" data-number="@ViewBag.reviewCount">0</strong>
                                 <span>我们收获的好评</span>
                             </div>
                         </div>
@@ -622,7 +528,7 @@
                             </div>
                             <div class="text">
                                 <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                                <p class="name">Mark Web</p>
+                                <p class="name">1</p>
                                 <span class="position">Marketing Manager</span>
                             </div>
                         </div>
@@ -636,7 +542,7 @@
                             </div>
                             <div class="text">
                                 <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                                <p class="name">Mark Web</p>
+                                <p class="name">2</p>
                                 <span class="position">Interface Designer</span>
                             </div>
                         </div>
@@ -650,7 +556,7 @@
                             </div>
                             <div class="text">
                                 <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                                <p class="name">Mark Web</p>
+                                <p class="name">3</p>
                                 <span class="position">UI Designer</span>
                             </div>
                         </div>
@@ -664,7 +570,7 @@
                             </div>
                             <div class="text">
                                 <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                                <p class="name">Mark Web</p>
+                                <p class="name">4</p>
                                 <span class="position">Web Developer</span>
                             </div>
                         </div>
@@ -678,7 +584,35 @@
                             </div>
                             <div class="text">
                                 <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                                <p class="name">Mark Web</p>
+                                <p class="name">5</p>
+                                <span class="position">System Analyst</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="testimony-wrap p-4 pb-5">
+                            <div class="user-img mb-5" style="background-image: url(../images/person_1.jpg)">
+                                <span class="quote d-flex align-items-center justify-content-center">
+                                    <i class="icon-quote-left"></i>
+                                </span>
+                            </div>
+                            <div class="text">
+                                <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                                <p class="name">6</p>
+                                <span class="position">System Analyst</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="testimony-wrap p-4 pb-5">
+                            <div class="user-img mb-5" style="background-image: url(../images/person_1.jpg)">
+                                <span class="quote d-flex align-items-center justify-content-center">
+                                    <i class="icon-quote-left"></i>
+                                </span>
+                            </div>
+                            <div class="text">
+                                <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                                <p class="name">7</p>
                                 <span class="position">System Analyst</span>
                             </div>
                         </div>
